include/colyseus/predict/reconciler.h

/*
 * Reconciler — server-reconciled rollback for a locally-controlled entity
 * (port of predict/rollback.ts + reconciler.ts, flat-fields face).
 *
 * A pure OBSERVER of an input handle: you mutate + send through the handle
 * (`input->data.x = …; colyseus_input_handle_send(input)`) and the reconciler
 * steps its predicted simulation for each send, buffers nothing itself (the
 * handle's replay ring holds the unacked inputs), and when the server ack
 * advances it rewinds to the authoritative instance + replays the still-
 * unacked inputs — smoothly absorbing mispredictions into per-field visual
 * offsets that decay to zero.
 *
 * The PREDICTED STATE is a schema-instance MIRROR (same vtable as the truth
 * instance): your `step` receives it as a plain struct pointer and mutates
 * fields directly — `((my_player_t*)state)->vy = …`. Numeric and boolean
 * fields participate; the mirror is seeded from the truth instance at
 * construction (string/ref/collection fields stay untouched on the mirror and
 * are NOT reconciled — read those off the raw instance).
 */
typedef struct colyseus_reconciler colyseus_reconciler_t;
struct colyseus_predict;
/* Per-step context (mirrors the server's StepContext — one fixed dt drives
 * both sides). Reused across steps; read inside `step` only. */
typedef struct colyseus_step_ctx {
    double dt;        /* fixed step in SECONDS (1/tickRate) */
    double dt_ms;     /* fixed step in MILLISECONDS */
    int tick;         /* the input's seq — the index of the step being simulated */
    int sub_steps;    /* physics sub-steps per fixed step (>= 1) */
    double sub_dt;    /* dt / sub_steps */
    double sub_dt_ms; /* dt_ms / sub_steps */
    /* true while re-simulating an already-applied input during rollback —
     * one-shot presentation must branch on this (`if (!ctx->is_replay) …`) */
    bool is_replay;
    /* the input's reckon instant (server-clock ms): the per-seq lag-comp stamp
     * when present (replay-deterministic), else the live serverNow() */
    double reckon_time;
    bool lag_comp_active;
    /* backing for colyseus_step_memo (opaque) */
    void* _memo_backing;
} colyseus_step_ctx_t;
int colyseus_step_memo_vec(const colyseus_step_ctx_t* ctx, const char* key,
    int (*compute)(double* out, void* userdata), void* userdata, double* out);
int colyseus_reconciler_reconcile_seq(const colyseus_reconciler_t* r);
/*
 * Manual pump — inverted control for hosts whose FFI cannot call back into
 * script (GameMaker's one-way extension ABI). Create with
 * `options.manual_step = true` (`step` may be NULL); the reconciler then
 * never invokes a step callback. Each frame, AFTER colyseus_reconciler_tick()
 * and after any colyseus_input_handle_send(), drain the due steps:
 *
 *   int n;
 *   while ((n = colyseus_reconciler_pump_begin(r)) > 0) {
 *       const colyseus_step_ctx_t* ctx;
 *       const colyseus_schema_t* cmd;
 *       while ((cmd = colyseus_reconciler_pump_next(r, &ctx)) != NULL) {
 *           // THE STEP: apply cmd to colyseus_reconciler_state(r) over ctx->dt
 *           colyseus_reconciler_pump_commit(r);
 *       }
 *       colyseus_reconciler_pump_end(r);
 *   }
 *
 * One begin() serves ONE phase — a pending reconcile's replay burst
 * (ctx->is_replay = true; only seqs that already ran live are replayed), or
 * the live catch-up for inputs sent since the last drain — so loop until
 * begin() returns 0 to drain both. A send that coincides with an ack is
 * served in the live phase, never mislabeled a replay. Error decay that
 * tick() deferred while a reconcile was pending is applied inside
 * pump_end(), preserving the auto path's rebase-then-decay ordering exactly.
 * Reads (value(), state()) between tick() and the drain see pre-reconcile
 * state; read after draining.
 *
 * Misuse: a phase left open (a missed pump_end) is auto-closed by the next
 * begin(); serving a step without pump_commit abandons that step at
 * pump_end. The live phase only advances through pump_next/pump_commit —
 * a host that begins but never drains will see begin() > 0 again.
 */
int colyseus_reconciler_pump_begin(colyseus_reconciler_t* r);
const colyseus_schema_t* colyseus_reconciler_pump_next(colyseus_reconciler_t* r,
                                                       const colyseus_step_ctx_t** out_ctx);
void colyseus_reconciler_pump_commit(colyseus_reconciler_t* r);
void colyseus_reconciler_pump_end(colyseus_reconciler_t* r);
/* @internal — set by colyseus_predict_reconciler() so free() can deregister. */
void colyseus_reconciler_set_driver_(colyseus_reconciler_t* r, struct colyseus_predict* driver);
/* One controller-owned (instance, field) and the pose key it reads back as.
 * Flattened to triples rather than the reference's per-instance registration
 * arrays: no nested ownership to hand across the module boundary. */
typedef struct {
    colyseus_schema_t* source;   /* the DECODED instance, never the mirror */
    const char* field;           /* borrowed — outlives the call, owned by `r` */
    const char* pose_key;        /* == field on the flat face */
} colyseus_bound_field_t;
/* @internal — enumerate what colyseus_predict_value() needs to reach this
 * controller's poses. Returns the total count; pass out=NULL (max ignored) to
 * size first. Writes at most `max`. */
int colyseus_reconciler_bound_fields_(const colyseus_reconciler_t* r,
                                      colyseus_bound_field_t* out, int max);