include/colyseus/predict/spawns.h

/*
 * Predicted-spawn store (port of predict/predictedSpawns.ts) — optimistic,
 * server-reconciled ENTITIES (a fired bullet, a dropped item). Predicted
 * locals live OUTSIDE the schema collection; when the authoritative entity
 * arrives its onAdd is routed here and a pending local is correlated to it —
 * the two collapse onto ONE logical entry with a stable id (key sprites on
 * it; the handoff is invisible).
 *
 * Locals are opaque pointers owned by the app; local_free (optional) runs
 * when an entry that still holds a local dies.
 */
typedef struct colyseus_spawns colyseus_spawns_t;
typedef struct {
    /* which incoming server entities are this client's to correlate (NULL =
     * every entity is correlatable) */
    bool (*owned)(colyseus_schema_t* server, void* userdata);
    /* pairing: NULL = fifo (oldest pending); else first pending for which
     * this returns true */
    bool (*correlate)(void* local, colyseus_schema_t* server, void* userdata);
    /* server-clock spawn instant of an authoritative entity — enables the
     * measured input lead (lead = spawn_time(server) − entry.at) */
    double (*spawn_time)(colyseus_schema_t* server, void* userdata);
    bool has_spawn_time;
    /* advance a pending local by dt seconds (serverNow axis when clocked) */
    void (*step)(void* local, double dt, void* userdata);
    /* read a named field off a predicted local — lets colyseus_spawns_value()
     * span the handoff so the app has ONE render path (optional) */
    double (*local_read)(void* local, const char* field, void* userdata);
    /* eviction window (ms) for unmatched predictions; 0 = max(2·rtt, 600) */
    double ttl_ms;
    void (*on_reject)(void* local, int id, void* userdata);
    void (*local_free)(void* local);
    void* userdata;
} colyseus_spawns_options_t;
colyseus_spawns_t* colyseus_spawns_create(
    const colyseus_spawns_options_t* options,
    colyseus_room_clock_t* clock /* nullable */);
void colyseus_spawns_free(colyseus_spawns_t* spawns);