platforms/flutter/colyseus_flutter/lib/src/bindings/colyseus_core.dart


  late final _colyseus_reconciler_reconcile_seqPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<colyseus_reconciler_t>)>>(
      'colyseus_reconciler_reconcile_seq');
  late final _colyseus_reconciler_reconcile_seq =
      _colyseus_reconciler_reconcile_seqPtr
          .asFunction<int Function(ffi.Pointer<colyseus_reconciler_t>)>(
              isLeaf: true);

  int colyseus_reconciler_pump_begin(
    ffi.Pointer<colyseus_reconciler_t> r,
  ) {
    return _colyseus_reconciler_pump_begin(
      r,
    );
  }

  late final _colyseus_reconciler_pump_beginPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<colyseus_reconciler_t>)>>(
      'colyseus_reconciler_pump_begin');
  late final _colyseus_reconciler_pump_begin =
      _colyseus_reconciler_pump_beginPtr
          .asFunction<int Function(ffi.Pointer<colyseus_reconciler_t>)>();

  ffi.Pointer<colyseus_schema_t> colyseus_reconciler_pump_next(
    ffi.Pointer<colyseus_reconciler_t> r,
    ffi.Pointer<ffi.Pointer<colyseus_step_ctx_t>> out_ctx,
  ) {
    return _colyseus_reconciler_pump_next(
      r,
      out_ctx,
    );
  }

  late final _colyseus_reconciler_pump_nextPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<colyseus_schema_t> Function(
                  ffi.Pointer<colyseus_reconciler_t>,
                  ffi.Pointer<ffi.Pointer<colyseus_step_ctx_t>>)>>(
      'colyseus_reconciler_pump_next');
  late final _colyseus_reconciler_pump_next =
      _colyseus_reconciler_pump_nextPtr.asFunction<
          ffi.Pointer<colyseus_schema_t> Function(
              ffi.Pointer<colyseus_reconciler_t>,
              ffi.Pointer<ffi.Pointer<colyseus_step_ctx_t>>)>();

  void colyseus_reconciler_pump_commit(
    ffi.Pointer<colyseus_reconciler_t> r,
  ) {
    return _colyseus_reconciler_pump_commit(
      r,
    );
  }

  late final _colyseus_reconciler_pump_commitPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<colyseus_reconciler_t>)>>(
      'colyseus_reconciler_pump_commit');
  late final _colyseus_reconciler_pump_commit =
      _colyseus_reconciler_pump_commitPtr
          .asFunction<void Function(ffi.Pointer<colyseus_reconciler_t>)>();

  void colyseus_reconciler_pump_end(
    ffi.Pointer<colyseus_reconciler_t> r,
  ) {
    return _colyseus_reconciler_pump_end(
      r,
    );
  }

  late final _colyseus_reconciler_pump_endPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<colyseus_reconciler_t>)>>(
      'colyseus_reconciler_pump_end');
  late final _colyseus_reconciler_pump_end = _colyseus_reconciler_pump_endPtr
      .asFunction<void Function(ffi.Pointer<colyseus_reconciler_t>)>();

  void colyseus_reconciler_set_driver_(
    ffi.Pointer<colyseus_reconciler_t> r,
    ffi.Pointer<colyseus_predict> driver,
  ) {
    return _colyseus_reconciler_set_driver_(
      r,
      driver,
    );
  }

  late final _colyseus_reconciler_set_driver_Ptr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<colyseus_reconciler_t>,
                  ffi.Pointer<colyseus_predict>)>>(
      'colyseus_reconciler_set_driver_');
  late final _colyseus_reconciler_set_driver_ =
      _colyseus_reconciler_set_driver_Ptr.asFunction<
          void Function(ffi.Pointer<colyseus_reconciler_t>,
              ffi.Pointer<colyseus_predict>)>();

  int colyseus_reconciler_bound_fields_(
    ffi.Pointer<colyseus_reconciler_t> r,
    ffi.Pointer<colyseus_bound_field_t> out,
    int max,
  ) {
    return _colyseus_reconciler_bound_fields_(
      r,
      out,
      max,
    );
  }

  late final _colyseus_reconciler_bound_fields_Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<colyseus_reconciler_t>,
              ffi.Pointer<colyseus_bound_field_t>,
              ffi.Int)>>('colyseus_reconciler_bound_fields_');
  late final _colyseus_reconciler_bound_fields_ =
      _colyseus_reconciler_bound_fields_Ptr.asFunction<
          int Function(ffi.Pointer<colyseus_reconciler_t>,
              ffi.Pointer<colyseus_bound_field_t>, int)>();

  ffi.Pointer<colyseus_event_channel_t> colyseus_event_channel_create(
    ffi.Pointer<colyseus_event_channel_options_t> options,
    ffi.Pointer<colyseus_room_clock_t> clock,
  ) {
    return _colyseus_event_channel_create(
      options,
      clock,
    );
  }

  late final _colyseus_event_channel_createPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<colyseus_event_channel_t> Function(
                  ffi.Pointer<colyseus_event_channel_options_t>,
                  ffi.Pointer<colyseus_room_clock_t>)>>(
      'colyseus_event_channel_create');
  late final _colyseus_event_channel_create =
      _colyseus_event_channel_createPtr.asFunction<
          ffi.Pointer<colyseus_event_channel_t> Function(
              ffi.Pointer<colyseus_event_channel_options_t>,
              ffi.Pointer<colyseus_room_clock_t>)>();

  void colyseus_event_channel_free(
    ffi.Pointer<colyseus_event_channel_t> channel,
  ) {
    return _colyseus_event_channel_free(
      channel,
    );
  }

  late final _colyseus_event_channel_freePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<colyseus_event_channel_t>)>>(
      'colyseus_event_channel_free');
  late final _colyseus_event_channel_free = _colyseus_event_channel_freePtr
      .asFunction<void Function(ffi.Pointer<colyseus_event_channel_t>)>();

  bool colyseus_event_channel_predict(
    ffi.Pointer<colyseus_event_channel_t> channel,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Void> payload,
  ) {
    return _colyseus_event_channel_predict(
      channel,
      key,
      payload,
    );
  }

  late final _colyseus_event_channel_predictPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(
              ffi.Pointer<colyseus_event_channel_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Void>)>>('colyseus_event_channel_predict');
  late final _colyseus_event_channel_predict =
      _colyseus_event_channel_predictPtr.asFunction<
          bool Function(ffi.Pointer<colyseus_event_channel_t>,
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Void>)>();

  void colyseus_step_predict(
    ffi.Pointer<colyseus_step_ctx_t> ctx,
    ffi.Pointer<colyseus_event_channel_t> channel,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Void> payload,
  ) {
    return _colyseus_step_predict(
      ctx,
      channel,
      key,
      payload,
    );
  }

  late final _colyseus_step_predictPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<colyseus_step_ctx_t>,
              ffi.Pointer<colyseus_event_channel_t>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Void>)>>('colyseus_step_predict');
  late final _colyseus_step_predict = _colyseus_step_predictPtr.asFunction<
      void Function(
          ffi.Pointer<colyseus_step_ctx_t>,
          ffi.Pointer<colyseus_event_channel_t>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Void>)>();

  bool colyseus_event_channel_has(
    ffi.Pointer<colyseus_event_channel_t> channel,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _colyseus_event_channel_has(
      channel,
      key,
    );
  }

  late final _colyseus_event_channel_hasPtr = _lookup<
      ffi.NativeFunction<
          ffi.Bool Function(ffi.Pointer<colyseus_event_channel_t>,
              ffi.Pointer<ffi.Char>)>>('colyseus_event_channel_has');
  late final _colyseus_event_channel_has =
      _colyseus_event_channel_hasPtr.asFunction<
          bool Function(ffi.Pointer<colyseus_event_channel_t>,
              ffi.Pointer<ffi.Char>)>(isLeaf: true);

  int colyseus_event_channel_pending_count(
    ffi.Pointer<colyseus_event_channel_t> channel,
  ) {
    return _colyseus_event_channel_pending_count(
      channel,
    );
  }

  late final _colyseus_event_channel_pending_countPtr = _lookup<
          ffi.NativeFunction<
              ffi.Int Function(ffi.Pointer<colyseus_event_channel_t>)>>(
      'colyseus_event_channel_pending_count');
  late final _colyseus_event_channel_pending_count =
      _colyseus_event_channel_pending_countPtr
          .asFunction<int Function(ffi.Pointer<colyseus_event_channel_t>)>(
              isLeaf: true);

  int colyseus_event_channel_confirm(
    ffi.Pointer<colyseus_event_channel_t> channel,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _colyseus_event_channel_confirm(
      channel,
      key,
    );
  }

  late final _colyseus_event_channel_confirmPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<colyseus_event_channel_t>,
              ffi.Pointer<ffi.Char>)>>('colyseus_event_channel_confirm');
  late final _colyseus_event_channel_confirm =
      _colyseus_event_channel_confirmPtr.asFunction<
          int Function(
              ffi.Pointer<colyseus_event_channel_t>, ffi.Pointer<ffi.Char>)>();

  int colyseus_event_channel_reject(
    ffi.Pointer<colyseus_event_channel_t> channel,
    ffi.Pointer<ffi.Char> key,
  ) {
    return _colyseus_event_channel_reject(
      channel,
      key,
    );
  }

  late final _colyseus_event_channel_rejectPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<colyseus_event_channel_t>,
              ffi.Pointer<ffi.Char>)>>('colyseus_event_channel_reject');
  late final _colyseus_event_channel_reject =
      _colyseus_event_channel_rejectPtr.asFunction<
          int Function(
              ffi.Pointer<colyseus_event_channel_t>, ffi.Pointer<ffi.Char>)>();

  void colyseus_event_channel_clear(
    ffi.Pointer<colyseus_event_channel_t> channel,
  ) {
    return _colyseus_event_channel_clear(
      channel,
    );
  }

  late final _colyseus_event_channel_clearPtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<colyseus_event_channel_t>)>>(
      'colyseus_event_channel_clear');
  late final _colyseus_event_channel_clear = _colyseus_event_channel_clearPtr
      .asFunction<void Function(ffi.Pointer<colyseus_event_channel_t>)>();

  void colyseus_event_channel_prune(
    ffi.Pointer<colyseus_event_channel_t> channel,
  ) {
    return _colyseus_event_channel_prune(
      channel,
    );
  }

  late final _colyseus_event_channel_prunePtr = _lookup<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<colyseus_event_channel_t>)>>(
      'colyseus_event_channel_prune');
  late final _colyseus_event_channel_prune = _colyseus_event_channel_prunePtr
      .asFunction<void Function(ffi.Pointer<colyseus_event_channel_t>)>();

  ffi.Pointer<colyseus_spawns_t> colyseus_spawns_create(
    ffi.Pointer<colyseus_spawns_options_t> options,
    ffi.Pointer<colyseus_room_clock_t> clock,
  ) {
    return _colyseus_spawns_create(
      options,
      clock,
    );
  }

  late final _colyseus_spawns_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<colyseus_spawns_t> Function(
              ffi.Pointer<colyseus_spawns_options_t>,
              ffi.Pointer<colyseus_room_clock_t>)>>('colyseus_spawns_create');
  late final _colyseus_spawns_create = _colyseus_spawns_createPtr.asFunction<
      ffi.Pointer<colyseus_spawns_t> Function(
          ffi.Pointer<colyseus_spawns_options_t>,
          ffi.Pointer<colyseus_room_clock_t>)>();

  void colyseus_spawns_free(
    ffi.Pointer<colyseus_spawns_t> spawns,
  ) {
    return _colyseus_spawns_free(
      spawns,
    );
  }

  late final _colyseus_spawns_freePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<colyseus_spawns_t>)>>(
      'colyseus_spawns_free');
  late final _colyseus_spawns_free = _colyseus_spawns_freePtr
      .asFunction<void Function(ffi.Pointer<colyseus_spawns_t>)>();
